Commit Modifications